# Tinyx86os

./: CMakeLists.txt
image/: kernel.elf
script/: img-write-linux.sh  qemu-debug-linux.sh
source/boot/: CMakeLists.txt  boot.c  boot.h  start.S
source/comm/: boot_info.h  cpu_instr.h  elf.h  types.h
source/kernel/: CMakeLists.txt
source/kernel/core/: task.c
source/kernel/cpu/: cpu.c  irq.c
source/kernel/dev/: time.c
source/kernel/include/: os_cfg.h
source/kernel/include/core/: task.h
source/kernel/include/cpu/: cpu.h  irq.h
source/kernel/include/dev/: time.h
source/kernel/include/tools/: list.h
source/kernel/init/: init.c  start.S
source/kernel/tools/: klib.c  list.c  log.c
source/loader/: CMakeLists.txt  loader.h  loader_16.c  loader_32.c  start.S
